src/objects/Workshop__c.object
<CustomObject>
    <description>This will be used to store workshop related details.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workshops</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workshop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workshop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workshops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>